# PersonalVoiceAssistant

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
assistant/: urls.py  views.py
backend/: .env.example  settings.py  urls.py
backend/assistant/: urls.py  views.py
backend/config/: settings.py  urls.py
frontend/: script.js
static/css/: style.css
static/src/styles/: components.css  fonts.css
templates/: base.html  chat.html  home.html
templates/registration/: login.html  signup.html
users/: forms.py  views.py
