[project]
name = "personalvoiceassistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Harshpreet1729",email = "harshp4466@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "django-browser-reload (>=1.21.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "personalvoiceassistant", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
